Replaced recent images with popular threads

--- a/src/internal/locales/en.json
+++ b/src/internal/locales/en.json
@@ -8,7 +8,7 @@
   "unique_posters": "Unique Posters",
 
   "index_stats": "Stats",
-  "index_recent_images": "Recent images",
+  "index_recent_images": "Popular threads",
 
   "post_report": "Report",
   "post_quote": "Quote",
