Made index posts look better

--- a/src/internal/locales/pl.json
+++ b/src/internal/locales/pl.json
@@ -8,7 +8,7 @@
   "unique_posters": "Unikalni użytkownicy",
 
   "index_stats": "Statystyki",
-  "index_recent_images": "Ostatnie obrazy",
+  "index_recent_images": "Popularne wątki",
 
   "post_report": "Zgłoś",
   "post_quote": "Cytuj",
