Added ability to have diffrent themes for NSFW boards

--- a/src/internal/locales/pl.json
+++ b/src/internal/locales/pl.json
@@ -12,7 +12,7 @@
 
   "post_report": "Zgłoś",
   "post_quote": "Cytuj",
-  "post_reply": "Odpowiedz",
+  "post_reply": "Otwórz wątek",
   "post_replies_hide": "Schowaj odpowiedzi",
 
   "catalog": "Katalog"
