--- a/src/internal/locales/en.json
+++ b/src/internal/locales/en.json
@@ -12,7 +12,7 @@
 
   "post_report": "Report",
   "post_quote": "Quote",
-  "post_reply": "Reply",
+  "post_reply": "Open thread",
   "post_replies_hide": "View entire thread",
   "post_replies_last5": "Showing last 5 replies",
   
